# docs/swagger.yaml
@@ -45,6 +45,13 @@ definitions:
     required:
     - email
     type: object
+  predict.PredictSymptoms:
+    properties:
+      symptoms:
+        items:
+          type: string
+        type: array
+    type: object
 info:
   contact: {}
 paths:
@@ -103,6 +110,42 @@ paths:
       summary: Logout
       tags:
       - Auth
+  /v1/predict:
+    post:
+      description: Submit candidate rating with its interview result if it's their
+        last interview
+      parameters:
+      - description: Bearer Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Payload
+        in: body
+        name: Payload
+        required: true
+        schema:
+          $ref: '#/definitions/predict.PredictSymptoms'
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Submit Rating
+      tags:
+      - Predict
   /v1/register:
     post:
       description: Register
