# src/entity/v1/http/predict/request.go
@@ -1,0 +1,5 @@
+package predict
+
+type PredictSymptoms struct {
+	Symptoms []string `json:"symptoms"`
+}
